fixing squishy picturein lab testing and treatments pages

--- a/themes/mountain_health/sass/_footer.scss
+++ b/themes/mountain_health/sass/_footer.scss
@@ -70,7 +70,8 @@
         margin: 20px;
         height: 45px;
         @include mobile-break-width {
-            width: 400px;
+            width: 500px;
+            height: 60px;
         }
     }
     @include mobile-break-width {
@@ -85,11 +86,10 @@ input::-webkit-input-placeholder {
     font-family: 'open_sans', 'sans-serif';
     font-weight: light;
     font-size: 14px;
-    line-height: 1.71;
     text-align: left;
+    margin-top: 7px;
     color: #d1d0d0;
-    padding: 30px 0;
-    padding-left: 14px;
+padding-left: 15px;
     @include mobile-break-width {
         font-size: 22px;
     }
