--- a/themes/mountain_health/sass/_front-page.scss
+++ b/themes/mountain_health/sass/_front-page.scss
@@ -752,3 +752,6 @@
         margin: 0 auto;
     }
 }
+
+#booking{
+}
