--- a/themes/mountain_health/sass/_general-styles.scss
+++ b/themes/mountain_health/sass/_general-styles.scss
@@ -67,6 +67,9 @@
             font-size: 22px;
         }
     }
+    &:hover {
+        color: #fdeea7
+    }
 }
 
 .how-can-we-help-you {
